--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ca.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=Proporciona el servei remot per accedir, afegir, elimi
 ddmweb-configuration-name=Web de mapeig dinàmic de dades
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Defineix condicions i accions per canviar camps i elements del formulari.
 delete-action=Voleu suprimir l'acció?
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Suprimir la condició?
 delete-current-page=Eliminar la pàgina actual
 delete-field-dialog-title=Suprimir el camp?
@@ -140,6 +141,7 @@ enter-the-parameter=Introduïu el paràmetre.
 enter-the-path=Introduïu el camí.
 enter-the-rest-service-url=Introduïu la URL del servei REST.
 enter-time-in-milliseconds=Introduïu el temps en mil·lisegons.
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Expressió
 field-name-is-already-in-use=Aquest nom de camp ja existeix.
 field-types-basic-elements=Elements bàsics
@@ -147,6 +149,7 @@ field-types-customized-elements=Elements personalitzats
 field-types-sidebar-title=Afegeix elements
 field-validation-failed=Validació de camp personalitzat fallida.
 field-visibility-expression=Expressió per la visibilitat del camp
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Nom del paràmetre de filtre
 form-entries=Entrades de formularis
 form-settings=Configuració del formulari
@@ -156,6 +159,7 @@ from-data-provider=Del proveïdor de dades
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=Seleccioneu una ubicació d'un mapa.
 geolocation-field-type-label=Geolocalització
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Seleccioneu opcions d'una matriu.
 grid-field-type-label=Quadrícula
 help-text=Text d'ajuda
@@ -188,6 +192,7 @@ json[stands-for]=JSON
 jump-to-page=Salta a la pàgina
 jump-to-page-x=Salta a la pàgina {0}
 keyword=Paraula clau
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Sortir del formulari?
 leave-page=Abandona
 manage-templates=Gestiona les plantilles
@@ -270,7 +275,6 @@ save-form=Desa el formulari
 saved-x=Desat &#149; {0}
 saving=Guardant
 script-file=Fitxer script
-section-field-type-label=Grup de camps
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Seleccioneu un formulari existent o afegiu un nou formulari a mostrar dins d'aquesta aplicació.
 select-field-type-description=Tria una o més opcions d'una llista.
 select-field-type-label=Selecciona de la llista
