--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_de.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=Stellt den Remote Service bereit, der das Abrufen, Hin
 ddmweb-configuration-name=Dynamische Datenzuordnungen
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Definieren Sie Bedingungen und Aktionen, um Felder und Elemente im Formular zu ändern.
 delete-action=Aktion abbrechen?
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Bedingung löschen?
 delete-current-page=Aktuelle Seite löschen
 delete-field-dialog-title=Feld löschen?
@@ -140,6 +141,7 @@ enter-the-parameter=Geben Sie den Parameter ein.
 enter-the-path=Geben Sie den Pfad ein.
 enter-the-rest-service-url=Geben Sie die REST-Service-URL an.
 enter-time-in-milliseconds=Zeit in Millisekunden eingeben.
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Ausdruck
 field-name-is-already-in-use=Feldname wird bereits verwendet.
 field-types-basic-elements=Grundelemente
@@ -147,6 +149,7 @@ field-types-customized-elements=Benutzerdefinierte Elemente
 field-types-sidebar-title=Elemente hinzufügen
 field-validation-failed=Validierung des benutzerdefinierten Feldes fehlgeschlagen.
 field-visibility-expression=Ausdruck für die Feldsichtbarkeit
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Parametername filtern
 form-entries=Formulareinträge
 form-settings=Formulareinstellungen
@@ -156,6 +159,7 @@ from-data-provider=Von Datenanbieter
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=Wählen Sie einen Standort von einer Karte aus.
 geolocation-field-type-label=Ortung
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Wählen Sie Optionen aus einer Matrix aus.
 grid-field-type-label=Gitter
 help-text=Hilfetext
@@ -188,6 +192,7 @@ json[stands-for]=JSON
 jump-to-page=Gehe zu Seite
 jump-to-page-x=Gehe zu Seite {0}
 keyword=Keyword
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Formular verlassen?
 leave-page=Verlassen
 manage-templates=Vorlagen verwalten
@@ -270,7 +275,6 @@ save-form=Formular speichern
 saved-x=Gespeichert &#149; {0}
 saving=Speichern
 script-file=Scriptdatei
-section-field-type-label=Feldergruppen
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Wählen Sie ein bestehendes oder erstellen Sie ein neues Formular, um es in dieser Anwendung anzuzeigen.
 select-field-type-description=Wählen Sie eine oder mehrere Optionen aus einer Liste aus.
 select-field-type-label=Auswahl aus Liste
