--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_en_AU.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_en_AU.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=Provides the remote service for accessing, adding, cop
 ddmweb-configuration-name=Dynamic Data Mapping Web (Automatic Copy)
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Define conditions and actions to change fields and elements on the form. (Automatic Copy)
 delete-action=Delete action? (Automatic Copy)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Delete condition? (Automatic Copy)
 delete-current-page=Delete Current Page (Automatic Copy)
 delete-field-dialog-title=Delete field? (Automatic Copy)
@@ -140,6 +141,7 @@ enter-the-parameter=Enter the parameter. (Automatic Copy)
 enter-the-path=Enter the path. (Automatic Copy)
 enter-the-rest-service-url=Enter the REST service URL. (Automatic Copy)
 enter-time-in-milliseconds=Enter time in milliseconds. (Automatic Copy)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Expression (Automatic Copy)
 field-name-is-already-in-use=Field name is already in use. (Automatic Copy)
 field-types-basic-elements=Basic Elements (Automatic Copy)
@@ -147,6 +149,7 @@ field-types-customized-elements=Customized Elements (Automatic Copy)
 field-types-sidebar-title=Add Elements (Automatic Copy)
 field-validation-failed=A custom field validation failed. (Automatic Copy)
 field-visibility-expression=Field Visibility Expression (Automatic Copy)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Filter Parameter Name (Automatic Copy)
 form-entries=Form Entries (Automatic Copy)
 form-settings=Form Settings (Automatic Copy)
@@ -156,6 +159,7 @@ from-data-provider=From Data Provider (Automatic Copy)
 ftl[stands-for]=FreeMarker (Automatic Copy)
 geolocation-field-type-description=Select a location from a map. (Automatic Copy)
 geolocation-field-type-label=Geolocation (Automatic Copy)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Select options from a matrix. (Automatic Copy)
 grid-field-type-label=Grid (Automatic Copy)
 help-text=Help Text (Automatic Copy)
@@ -188,6 +192,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Jump to Page (Automatic Copy)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Keyword (Automatic Copy)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Leave form? (Automatic Copy)
 leave-page=Leave (Automatic Copy)
 manage-templates=Manage Templates (Automatic Copy)
@@ -270,7 +275,6 @@ save-form=Save Form (Automatic Copy)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Saving (Automatic Copy)
 script-file=Script File (Automatic Copy)
-section-field-type-label=Fields Group (Automatic Copy)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Select an existing form or add a form to be displayed in this application. (Automatic Copy)
 select-field-type-description=Select options from a list. (Automatic Copy)
 select-field-type-label=Select from List (Automatic Copy)
