--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_es.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=Provee el servicio remoto para acceder, añadir, copia
 ddmweb-configuration-name=Web de asignación de datos dinámicos
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Defina las condiciones y las acciones para cambiar los campos y elementos en el formulario.
 delete-action=¿Quién eliminar la acción?
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=¿Eliminar condición?
 delete-current-page=Eliminar página actual
 delete-field-dialog-title=¿Eliminar campo?
@@ -140,6 +141,7 @@ enter-the-parameter=Escriba el parámetro.
 enter-the-path=Escriba la ruta.
 enter-the-rest-service-url=Introduzca la URL del servicio REST.
 enter-time-in-milliseconds=Especifique el tiempo en milisegundos.
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Expresión
 field-name-is-already-in-use=El nombre del campo ya está en uso.
 field-types-basic-elements=Elementos básicos
@@ -147,6 +149,7 @@ field-types-customized-elements=Elementos personalizados
 field-types-sidebar-title=Añadir elementos
 field-validation-failed=La validación de un campo personalizado ha fallado
 field-visibility-expression=Expresión de visibilidad del campo
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Nombre de parámetro de filtro
 form-entries=Registros de formularios
 form-settings=Configuraciones del formulario
@@ -156,6 +159,7 @@ from-data-provider=De proveedor de datos
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=Seleccione una ubicación en un mapa.
 geolocation-field-type-label=Geolocalización
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Seleccionar opciones de una matriz.
 grid-field-type-label=Cuadrícula
 help-text=Texto de ayuda
@@ -188,6 +192,7 @@ json[stands-for]=JSON
 jump-to-page=Ir a la página
 jump-to-page-x=Ir a la página {0}
 keyword=Palabra clave
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=¿Salir del formulario?
 leave-page=Salir
 manage-templates=Administrar plantillas
@@ -270,7 +275,6 @@ save-form=Guardar formulario
 saved-x=Guardado &#149; {0}
 saving=Guardando
 script-file=Archivo de script
-section-field-type-label=Grupo de campos
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Seleccione un formulario existente o añada un formulario para ser mostrado en esta aplicación.
 select-field-type-description=Seleccione una o más opciones de una lista.
 select-field-type-label=Seleccionar de lista
