--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_et.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=(Automatic Copy)
 ddmweb-configuration-name=Dünaamilise kaardistamise Web (Automatic Translation)
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Määratleda tingimused ja toimingud, väljade ja elementide vormi muutmine. (Automatic Translation)
 delete-action=Toimingu kustutada? (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Kustuta tingimus? (Automatic Translation)
 delete-current-page=Kustuta praegune leht (Automatic Translation)
 delete-field-dialog-title=Välja kustutada? (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=Sisestage parameetri. (Automatic Translation)
 enter-the-path=Sisestage tee. (Automatic Translation)
 enter-the-rest-service-url=Sisestage ülejäänud Otsinguteenuse URL. (Automatic Translation)
 enter-time-in-milliseconds=Sisestage aeg millisekundites. (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Avaldis (Automatic Translation)
 field-name-is-already-in-use=Välja nimi on juba kasutusel. (Automatic Translation)
 field-types-basic-elements=Põhielemendid (Automatic Translation)
@@ -147,6 +149,7 @@ field-types-customized-elements=Kohandatud elementide (Automatic Translation)
 field-types-sidebar-title=Lisada elemente (Automatic Translation)
 field-validation-failed=Kohandatud välja valideerimine nurjus. (Automatic Translation)
 field-visibility-expression=Väli nähtavus avaldis (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Filter parameetri nimi (Automatic Translation)
 form-entries=Vormi kanded (Automatic Translation)
 form-settings=Vormi sätted (Automatic Translation)
@@ -156,6 +159,7 @@ from-data-provider=Andmete pakkuja (Automatic Translation)
 ftl[stands-for]=FreeMarker (Automatic Copy)
 geolocation-field-type-description=Vali asukoht kaardilt. (Automatic Translation)
 geolocation-field-type-label=Geograafilise asukoha (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Saate valida maatriksi suvandid. (Automatic Translation)
 grid-field-type-label=Grid (Automatic Translation)
 help-text=Abiteksti (Automatic Translation)
@@ -188,6 +192,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Leheküljele liikumiseks (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Märksõna (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Jäta vorm? (Automatic Translation)
 leave-page=Lahku
 manage-templates=Mallide haldamine
@@ -270,7 +275,6 @@ save-form=Salvesta vorm (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Salvestamine (Automatic Translation)
 script-file=Skriptifaili (Automatic Translation)
-section-field-type-label=Väljade rühm (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Valige olemasolev vorm või kuvada selle rakenduse lisamine. (Automatic Translation)
 select-field-type-description=Valige loendist soovitud suvandid. (Automatic Translation)
 select-field-type-label=Valige loendist (Automatic Translation)
