--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fa.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=(Automatic Copy)
 ddmweb-configuration-name=نقشه‌برداری داده‌‌های دینامیک.
 define-condition-and-action-to-change-fields-and-elements-on-the-form=تعریف شرایط و اقداماتی برای تغییر زمینه ها و عناصر در فرم. (Automatic Translation)
 delete-action=عمل را حذف کنید؟ (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=حذف شرط است؟ (Automatic Translation)
 delete-current-page=صفحه موجود را حذف نمایید.
 delete-field-dialog-title=حذف زمینه? (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=پارامتر را وارد کنید. (Automatic Translatio
 enter-the-path=مسیر را وارد کنید. (Automatic Translation)
 enter-the-rest-service-url=آدرس خدمات REST را وارد نمایید.
 enter-time-in-milliseconds=زمان در میلی ثانیه وارد کنید. (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=بیان (Automatic Translation)
 field-name-is-already-in-use=نام فایل هم اکنون در حال استفاده است.
 field-types-basic-elements=عناصر اساسی (Automatic Translation)
@@ -147,6 +149,7 @@ field-types-customized-elements=سفارشی عناصر (Automatic Translation)
 field-types-sidebar-title=اضافه کردن عناصر (Automatic Translation)
 field-validation-failed=اعتبار فیلد کاربر نامعتبر است.
 field-visibility-expression=عبارت قابل مشاهده فیلد
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=نام پارامتر فیلتر (Automatic Translation)
 form-entries=پست‌های فرم
 form-settings=تنظیمات فرم
@@ -156,6 +159,7 @@ from-data-provider=از ارائه دهنده داده ها (Automatic Translati
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=مکانی را از نقشه انتخاب کنید. (Automatic Translation)
 geolocation-field-type-label=موقعیت جغرافیایی (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=گزینه ها را از یک ماتریس انتخاب کنید. (Automatic Translation)
 grid-field-type-label=شبکه
 help-text=متن راهنمایی
@@ -188,6 +192,7 @@ json[stands-for]=JSON
 jump-to-page=رفتن به صفحه (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=کلمات کلیدی
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=فرم کند؟ (Automatic Translation)
 leave-page=انصراف از عضویت سایت
 manage-templates=مدیریت قالب ها
@@ -270,7 +275,6 @@ save-form=ذخيره فرم
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=در حال ذخیره
 script-file=فایل اسکریپت
-section-field-type-label=زمینه های گروه (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=یک فرم انتخاب و یا اضافه کنید تا در این اپلیکیشن نمایش داده شود.
 select-field-type-description=گزینه ها را از لیست انتخاب کنید. (Automatic Translation)
 select-field-type-label=از لیست انتخاب کنید (Automatic Translation)
