--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fr.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=Fournit le service distant pour accéder, ajouter, cop
 ddmweb-configuration-name=Mappage de données dynamiques Web
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Définissez les conditions et actions pour modifier les champs et éléments du formulaire.
 delete-action=Supprimer l'action ?
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Supprimer la condition ?
 delete-current-page=Supprimer la page courante
 delete-field-dialog-title=Supprimer le champ ?
@@ -140,6 +141,7 @@ enter-the-parameter=Saisissez le paramètre.
 enter-the-path=Saisissez le chemin.
 enter-the-rest-service-url=Entrer l'URL de service REST.
 enter-time-in-milliseconds=Saisissez la durée en millisecondes.
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Expression
 field-name-is-already-in-use=Le nom du champs est déjà utilisé.
 field-types-basic-elements=Éléments basiques
@@ -147,6 +149,7 @@ field-types-customized-elements=Éléments personnalisés
 field-types-sidebar-title=Ajouter des éléments
 field-validation-failed=Une validation de champ personnalisé a échoué.
 field-visibility-expression=Champs expression de visibilité
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Nom du paramètre de filtre
 form-entries=Entrées du formulaire
 form-settings=Paramètres de formulaire
@@ -156,6 +159,7 @@ from-data-provider=Depuis le fournisseur de données
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=Sélectionnez une localisation sur une carte.
 geolocation-field-type-label=Géolocalisation
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Sélectionnez les options dans une matrice.
 grid-field-type-label=Grille
 help-text=Texte d'aide
@@ -188,6 +192,7 @@ json[stands-for]=JSON
 jump-to-page=Aller à la page
 jump-to-page-x=Aller à la page {0}
 keyword=Mot-clé
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Quitter le formulaire ?
 leave-page=Laisser
 manage-templates=Gérer les gabarits
@@ -270,7 +275,6 @@ save-form=Enregistrer le formulaire
 saved-x=Enregistré &#149; {0}
 saving=en cours d'enregistrement
 script-file=Fichier de script
-section-field-type-label=Groupe de champs
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Sélectionner un formulaire existant ou ajouter un formulaire pour être afficher dans cette application.
 select-field-type-description=Choisissez une ou plusieurs options de la liste.
 select-field-type-label=Sélectionnez dans la liste
