--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_hi_IN.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=(Automatic Copy)
 ddmweb-configuration-name=गतिशील डेटा वेब मैपिंग (Automatic Translation)
 define-condition-and-action-to-change-fields-and-elements-on-the-form=प्रपत्र पर फ़ील्ड्स और तत्वों को परिवर्तित करने के लिए शर्तें और क्रियाएं निर्धारित करें । (Automatic Translation)
 delete-action=कार्रवाई हटाएं? (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=स्थिति हटाएं? (Automatic Translation)
 delete-current-page=वर्तमान पृष्ठ हटाएँ (Automatic Translation)
 delete-field-dialog-title=फ़ील्ड हटाएं? (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=पैरामीटर दर्ज करें। (Autom
 enter-the-path=पथ दर्ज करें। (Automatic Translation)
 enter-the-rest-service-url=बाकी सेवा URL दर्ज करें। (Automatic Translation)
 enter-time-in-milliseconds=मिलीसेकंड में समय दर्ज करें । (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=अभिव्यक्ति (Automatic Translation)
 field-name-is-already-in-use=फ़ील्ड का नाम पहले से उपयोग में है। (Automatic Translation)
 field-types-basic-elements=बुनियादी तत्वों (Automatic Translation)
@@ -147,6 +149,7 @@ field-types-customized-elements=अनुकूलित तत्व (Automatic
 field-types-sidebar-title=तत्व जोड़ें (Automatic Translation)
 field-validation-failed=एक कस्टम फ़ील्ड सत्यापन विफल हुआ। (Automatic Translation)
 field-visibility-expression=फ़ील्ड दृश्यता अभिव्यक्ति (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=फ़िल्टर पैरामीटर नाम (Automatic Translation)
 form-entries=प्रपत्र प्रविष्टियाँ (Automatic Translation)
 form-settings=प्रपत्र सेटिंग्स (Automatic Translation)
@@ -156,6 +159,7 @@ from-data-provider=डेटा प्रदाता से (Automatic Translat
 ftl[stands-for]=FreeMarker (Automatic Copy)
 geolocation-field-type-description=नक्शे से किसी स्थान का चयन करें। (Automatic Translation)
 geolocation-field-type-label=जियोलोकेशन (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=मैट्रिक्स से विकल्पों का चयन करें. (Automatic Translation)
 grid-field-type-label=ग्रिड (Automatic Translation)
 help-text=मदद पाठ (Automatic Translation)
@@ -188,6 +192,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=पृष्ठ पर जाएँ (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=खोजशब्द (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=प्रपत्र छोड़ दें? (Automatic Translation)
 leave-page=छोडो
 manage-templates=नमूने को मेनेज करना
@@ -270,7 +275,6 @@ save-form=प्रपत्र सहेजें (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=बचत (Automatic Translation)
 script-file=स्क्रिप्ट फ़ाइल (Automatic Translation)
-section-field-type-label=फील्ड्स समूह (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=किसी मौजूदा प्रपत्र का चयन करें या इस अनुप्रयोग में प्रदर्शित करने के लिए एक फार्म जोड़ें। (Automatic Translation)
 select-field-type-description=किसी सूची से विकल्प ों का चयन करें। (Automatic Translation)
 select-field-type-label=सूची से चयन करें (Automatic Translation)
