--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_in.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=(Automatic Copy)
 ddmweb-configuration-name=Dynamic Data pemetaan Web (Automatic Translation)
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Menentukan kondisi dan tindakan untuk mengubah bidang dan unsur-unsur bentuk. (Automatic Translation)
 delete-action=Menghapus tindakan? (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Menghapus kondisi? (Automatic Translation)
 delete-current-page=Menghapus halaman saat ini (Automatic Translation)
 delete-field-dialog-title=Menghapus bidang? (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=Masukkan parameter. (Automatic Translation)
 enter-the-path=Masukkan path. (Automatic Translation)
 enter-the-rest-service-url=Masukkan URL Layanan lainnya. (Automatic Translation)
 enter-time-in-milliseconds=Masukkan waktu dalam milidetik. (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Ekspresi (Automatic Translation)
 field-name-is-already-in-use=Nama field yang sudah digunakan. (Automatic Translation)
 field-types-basic-elements=Elemen dasar (Automatic Translation)
@@ -147,6 +149,7 @@ field-types-customized-elements=Unsur-unsur yang disesuaikan (Automatic Translat
 field-types-sidebar-title=Menambahkan elemen (Automatic Translation)
 field-validation-failed=Bidang kustom validasi gagal. (Automatic Translation)
 field-visibility-expression=Bidang visibilitas ekspresi (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Parameter nama penyaring (Automatic Translation)
 form-entries=Formulir entri (Automatic Translation)
 form-settings=Bentuk pengaturan (Automatic Translation)
@@ -156,6 +159,7 @@ from-data-provider=Dari penyedia Data (Automatic Translation)
 ftl[stands-for]=FreeMarker (Automatic Copy)
 geolocation-field-type-description=Pilih lokasi dari peta. (Automatic Translation)
 geolocation-field-type-label=Geolokasi (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Pilih opsi dari matriks. (Automatic Translation)
 grid-field-type-label=Grid (Automatic Translation)
 help-text=Membantu teks (Automatic Translation)
@@ -188,6 +192,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Langsung ke halaman (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Kata kunci (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Meninggalkan bentuk? (Automatic Translation)
 leave-page=Meninggalkan
 manage-templates=Mengelola Template
@@ -270,7 +275,6 @@ save-form=Menyimpan formulir (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Tabungan (Automatic Translation)
 script-file=Script File (Automatic Translation)
-section-field-type-label=Kelompok Fields (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Pilih bentuk yang ada atau menambahkan bentuk yang akan ditampilkan dalam aplikasi ini. (Automatic Translation)
 select-field-type-description=Pilih opsi dari daftar. (Automatic Translation)
 select-field-type-label=Pilih dari daftar (Automatic Translation)
