--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_it.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=Fornisce il servizio remoto per accedere, aggiungere, 
 ddmweb-configuration-name=Mappatura Dati Dinamici Web
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Definire le condizioni e le azioni per modificare i campi e gli elementi del form. (Automatic Translation)
 delete-action=Eliminare l'azione? (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Elimina la condizione? (Automatic Translation)
 delete-current-page=Cancella Pagina Corrente
 delete-field-dialog-title=Eliminare il campo? (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=Immettere il parametro. (Automatic Translation)
 enter-the-path=Immettere il percorso. (Automatic Translation)
 enter-the-rest-service-url=Inserisci la URL del servizio REST.
 enter-time-in-milliseconds=Immettere il tempo in millisecondi. (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Espressione (Automatic Translation)
 field-name-is-already-in-use=Il nome del campo è già stato utilizzato.
 field-types-basic-elements=Elementi di base (Automatic Translation)
@@ -147,6 +149,7 @@ field-types-customized-elements=Elementi personalizzati (Automatic Translation)
 field-types-sidebar-title=Aggiungere elementi (Automatic Translation)
 field-validation-failed=Validazione campo personalizzato fallita.
 field-visibility-expression=Espressione di visibilità del campo
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Nome del parametro di filtro (Automatic Translation)
 form-entries=Elementi Modulo
 form-settings=Impostazioni Modulo
@@ -156,6 +159,7 @@ from-data-provider=Dal provider dati
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=Selezionare una posizione da una mappa. (Automatic Translation)
 geolocation-field-type-label=Geolocalizzazione (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Selezionare le opzioni da una matrice. (Automatic Translation)
 grid-field-type-label=Griglia (Automatic Translation)
 help-text=Testo di Aiuto
@@ -188,6 +192,7 @@ json[stands-for]=JSON
 jump-to-page=Passare alla pagina (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Parola chiave (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Lasciare il modulo? (Automatic Translation)
 leave-page=Esci
 manage-templates=Gestisci Modello
@@ -270,7 +275,6 @@ save-form=Salvare il modulo (Automatic Translation)
 saved-x=Salvato &#149; {0}
 saving=Salvataggio in corso
 script-file=File Script
-section-field-type-label=Gruppo Campi (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Seleziona un form esistente o aggiungi un form da visualizzare in questa applicazione.
 select-field-type-description=Selezionare le opzioni da un elenco. (Automatic Translation)
 select-field-type-label=Selezionare dall'elenco (Automatic Translation)
