--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ko.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=(Automatic Copy)
 ddmweb-configuration-name=동적 데이터 매핑 웹 (Automatic Translation)
 define-condition-and-action-to-change-fields-and-elements-on-the-form=조건 및 필드와 폼 요소를 변경 하는 작업을 정의 합니다. (Automatic Translation)
 delete-action=작업을 삭제? (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=조건 삭제? (Automatic Translation)
 delete-current-page=현재 페이지 삭제 (Automatic Translation)
 delete-field-dialog-title=필드를 삭제? (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=매개 변수를 입력 합니다. (Automatic Translation)
 enter-the-path=경로 입력 합니다. (Automatic Translation)
 enter-the-rest-service-url=나머지 서비스 URL을 입력 합니다. (Automatic Translation)
 enter-time-in-milliseconds=밀리초 단위로 시간을 입력 합니다. (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=식 (Automatic Translation)
 field-name-is-already-in-use=필드 이름이 이미 사용 중에서입니다. (Automatic Translation)
 field-types-basic-elements=기본 요소 (Automatic Translation)
@@ -147,6 +149,7 @@ field-types-customized-elements=사용자 지정된 요소 (Automatic Translatio
 field-types-sidebar-title=요소 추가 (Automatic Translation)
 field-validation-failed=사용자 정의 필드 유효성 검사에 실패 했습니다. (Automatic Translation)
 field-visibility-expression=필드 표시 유형 식 (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=필터 매개 변수 이름 (Automatic Translation)
 form-entries=양식 항목 (Automatic Translation)
 form-settings=양식 설정 (Automatic Translation)
@@ -156,6 +159,7 @@ from-data-provider=데이터 공급자 (Automatic Translation)
 ftl[stands-for]=FreeMarker (Automatic Copy)
 geolocation-field-type-description=지도에서 위치를 선택합니다. (Automatic Translation)
 geolocation-field-type-label=Geolocation (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=행렬에서 옵션을 선택합니다. (Automatic Translation)
 grid-field-type-label=그리드 (Automatic Translation)
 help-text=도움말 텍스트 (Automatic Translation)
@@ -188,6 +192,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=페이지로 이동 (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=키워드 (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=형태를 떠나? (Automatic Translation)
 leave-page=허가
 manage-templates=템플렛을 처리하십시오
@@ -270,7 +275,6 @@ save-form=양식 저장 (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=저장 (Automatic Translation)
 script-file=스크립트 파일 (Automatic Translation)
-section-field-type-label=필드 그룹 (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=이 응용 프로그램에 표시 되는 폼을 추가 하거나 기존 양식을 선택 합니다. (Automatic Translation)
 select-field-type-description=목록에서 옵션을 선택합니다. (Automatic Translation)
 select-field-type-label=목록에서 선택 (Automatic Translation)
