--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_lt.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=(Automatic Copy)
 ddmweb-configuration-name=Dinaminių duomenų atvaizdavimo interneto (Automatic Translation)
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Nurodykite sąlygas ir veiksmus, skirtus laukus ir elementus formos keitimas. (Automatic Translation)
 delete-action=Naikinti šį veiksmą? (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Naikinti sąlygą? (Automatic Translation)
 delete-current-page=Naikinti dabartinį puslapį (Automatic Translation)
 delete-field-dialog-title=Ar naikinti lauką? (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=Įveskite parametrą. (Automatic Translation)
 enter-the-path=Įveskite kelią. (Automatic Translation)
 enter-the-rest-service-url=Įveskite poilsio paslaugos URL. (Automatic Translation)
 enter-time-in-milliseconds=Įveskite laiką milisekundėmis. (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Išraiška (Automatic Translation)
 field-name-is-already-in-use=Lauko pavadinimas jau naudojamas. (Automatic Translation)
 field-types-basic-elements=Pagrindiniai elementai (Automatic Translation)
@@ -147,6 +149,7 @@ field-types-customized-elements=Tinkinamų elementų (Automatic Translation)
 field-types-sidebar-title=Pridėti elementus (Automatic Translation)
 field-validation-failed=Pasirinktinio lauko tikrinimas nepavyko. (Automatic Translation)
 field-visibility-expression=Lauko matomumas išraiška (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Filtras parametro pavadinimas (Automatic Translation)
 form-entries=Formų įrašus (Automatic Translation)
 form-settings=Formos Parametrai (Automatic Translation)
@@ -156,6 +159,7 @@ from-data-provider=Duomenų teikėjas (Automatic Translation)
 ftl[stands-for]=FreeMarker (Automatic Copy)
 geolocation-field-type-description=Pasirinkite vietą iš žemėlapio. (Automatic Translation)
 geolocation-field-type-label=Geolocation (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Pasirinkite pasirinktis iš matricos. (Automatic Translation)
 grid-field-type-label=Tinklelis (Automatic Translation)
 help-text=Žinyno tekstas (Automatic Translation)
@@ -188,6 +192,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Peršokti į puslapį (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Raktinis žodis (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Palikti formą? (Automatic Translation)
 leave-page=Atostogos (Automatic Translation)
 manage-templates=Tvarkyti ruošinius (Automatic Translation)
@@ -270,7 +275,6 @@ save-form=Išsaugoti formą (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Taupymo (Automatic Translation)
 script-file=Scenarijaus failas (Automatic Translation)
-section-field-type-label=Laukų grupė (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Pasirinkite esamą formą arba forma turi būti rodomi šioje paraiškoje. (Automatic Translation)
 select-field-type-description=Pasirinkite parinktis iš sąrašo. (Automatic Translation)
 select-field-type-label=Pasirinkite iš sąrašo (Automatic Translation)
