--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nb.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=Leverer fjerntilgangstjenesten for tilgang til, oppret
 ddmweb-configuration-name=Dynamisk tilordning Web (Automatic Translation)
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Definere betingelser og handlinger endre felt og elementer i skjemaet. (Automatic Translation)
 delete-action=Slette handling? (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Slette tilstand? (Automatic Translation)
 delete-current-page=Slett gjeldende side (Automatic Translation)
 delete-field-dialog-title=Slette feltet? (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=Angi parameteret.
 enter-the-path=Angi stien.
 enter-the-rest-service-url=Angit REST-tjeneste-URL-en.
 enter-time-in-milliseconds=Angi tid i millisekunder.
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Uttrykk
 field-name-is-already-in-use=Feltnavnet er allerede i bruk.
 field-types-basic-elements=Basiselement
@@ -147,6 +149,7 @@ field-types-customized-elements=Tilpassede elementer
 field-types-sidebar-title=Legg til elementer
 field-validation-failed=En egendefinert feltvalidering feilet.
 field-visibility-expression=Feltsynlighetsuttrykk
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Filterparameternavn
 form-entries=Skjemainnlegg
 form-settings=Skjemainnstillinger
@@ -156,6 +159,7 @@ from-data-provider=Skjemadatatilbyder
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=Velg et sted fra et kart.
 geolocation-field-type-label=Geolokalisering
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Gjør valg fra en matrise.
 grid-field-type-label=Rutenett
 help-text=Hjelpetekst
@@ -188,6 +192,7 @@ json[stands-for]=JSON
 jump-to-page=Hopp til side
 jump-to-page-x=Hopp til side {0}
 keyword=Nøkkelord
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Forlat skjema?
 leave-page=Forlate/la være
 manage-templates=Administrer maler
@@ -270,7 +275,6 @@ save-form=Lagre skjema
 saved-x=Lagret &#149; {0}
 saving=Lagrer
 script-file=Skript-fil
-section-field-type-label=Feltgruppe
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Velg et eksisterende skjema eller legg til et skjema som skal vises i denne applikasjonen.
 select-field-type-description=Velg en eller flere valg fra en liste.
 select-field-type-label=Velg fra liste
