--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nl.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=Voorziet in de externe service voor het benaderen, toe
 ddmweb-configuration-name=Dynamisch datamappingweb
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Omschrijf voorwaarden en acties om velden en elementen te wijzigen in het formulier.
 delete-action=Actie verwijderen?
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Voorwaarde verwijderen?
 delete-current-page=Verwijder huidige pagina
 delete-field-dialog-title=Veld verwijderen?
@@ -140,6 +141,7 @@ enter-the-parameter=Voer de parameter in.
 enter-the-path=Voer het pad in.
 enter-the-rest-service-url=Voer de REST service URL in
 enter-time-in-milliseconds=Voer de tijd in milliseconden in.
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Expressie
 field-name-is-already-in-use=De naam van het veld is al in gebruik.
 field-types-basic-elements=Basiselementen
@@ -147,6 +149,7 @@ field-types-customized-elements=Aangepaste elementen
 field-types-sidebar-title=Elementen toevoegen
 field-validation-failed=Een aangepaste veldvalidatie is mislukt.
 field-visibility-expression=Veld zichtbaarheidsexpressie
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Naam filterparameter
 form-entries=Formulierinzendingen
 form-settings=Formulierinstellingen
@@ -156,6 +159,7 @@ from-data-provider=Van dataprovider
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=Selecteer een locatie op een kaart.
 geolocation-field-type-label=Geolocatie
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Selecteer opties van een matrix.
 grid-field-type-label=Raster
 help-text=Hulptekst
@@ -188,6 +192,7 @@ json[stands-for]=JSON
 jump-to-page=Ga naar pagina
 jump-to-page-x=Ga naar pagina {0}
 keyword=Sleutelwoord
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Formulier afsluiten?
 leave-page=Verlaten
 manage-templates=Sjablonen beheren
@@ -270,7 +275,6 @@ save-form=Formulier opslaan
 saved-x=Opgeslagen &#149; {0}
 saving=Opslaan
 script-file=Scriptbestand
-section-field-type-label=Veldengroep
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Selecteer een bestaand formulier of voeg een nieuw formulier toe voor deze toepassing
 select-field-type-description=Kies een of meer opties uit een lijst.
 select-field-type-label=Kies uit lijst
