--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pl.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=Udostępnia zdalną usługę umożliwiającą dostęp,
 ddmweb-configuration-name=Dynamicznych danych mapowania sieci Web (Automatic Translation)
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Zdefiniuj warunki i działania, aby zmienić pola i elementy na formularzu. (Automatic Translation)
 delete-action=Usunąć akcję? (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Usuń warunek? (Automatic Translation)
 delete-current-page=Usuń bieżącą stronę (Automatic Translation)
 delete-field-dialog-title=Usuwanie pola? (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=Wprowadź parametr. (Automatic Translation)
 enter-the-path=Wprowadź ścieżkę. (Automatic Translation)
 enter-the-rest-service-url=Wprowadź adres URL usługi REST. (Automatic Translation)
 enter-time-in-milliseconds=Wprowadź czas, w milisekundach. (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Wyrażenie (Automatic Translation)
 field-name-is-already-in-use=Nazwa pola jest już w użyciu. (Automatic Translation)
 field-types-basic-elements=Podstawowe elementy (Automatic Translation)
@@ -147,6 +149,7 @@ field-types-customized-elements=Niestandardowe elementy (Automatic Translation)
 field-types-sidebar-title=Dodawanie elementów (Automatic Translation)
 field-validation-failed=Pole niestandardowe sprawdzanie poprawności nie powiodło się. (Automatic Translation)
 field-visibility-expression=Pole widoczności wyrażenie (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Nazwa parametru filtr (Automatic Translation)
 form-entries=Formularz zapisów (Automatic Translation)
 form-settings=Formularz ustawienia (Automatic Translation)
@@ -156,6 +159,7 @@ from-data-provider=Od dostawcy danych (Automatic Translation)
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=Wybierz lokalizację z mapy. (Automatic Translation)
 geolocation-field-type-label=Geolokalizacja (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Wybierz opcje z macierzy. (Automatic Translation)
 grid-field-type-label=Siatki (Automatic Translation)
 help-text=Tekst pomocy (Automatic Translation)
@@ -188,6 +192,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Przejść do strony (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Słowo kluczowe (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Opuścić formularza? (Automatic Translation)
 leave-page=Wyjdź
 manage-templates=Zarządzaj szablonami
@@ -270,7 +275,6 @@ save-form=Zapisz formularz (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Oszczędności (Automatic Translation)
 script-file=Plik skryptu
-section-field-type-label=Grupa pól (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Wybierz istniejącego formularza lub Dodawanie formularza mają być wyświetlane w tej aplikacji. (Automatic Translation)
 select-field-type-description=Wybierz opcje z listy. (Automatic Translation)
 select-field-type-label=Wybierz z listy (Automatic Translation)
