--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_BR.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=Fornece o serviço remoto para acessar, incluir, exclu
 ddmweb-configuration-name=Mapeamento Web de Dados Dinâmicos
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Defina condições e ações para alterar os campos e elementos no formulário.
 delete-action=Excluir ação?
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Apagar condição?
 delete-current-page=Excluir página atual
 delete-field-dialog-title=Excluir campo?
@@ -140,6 +141,7 @@ enter-the-parameter=Digite o parâmetro.
 enter-the-path=Digite o caminho.
 enter-the-rest-service-url=Insira a URL do serviço REST.
 enter-time-in-milliseconds=Digite o tempo em milissegundos.
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Expressão
 field-name-is-already-in-use=O nome do campo já está em uso.
 field-types-basic-elements=Elementos básicos
@@ -147,6 +149,7 @@ field-types-customized-elements=Elementos personalizados
 field-types-sidebar-title=Adicionar elementos
 field-validation-failed=Falha na validação de campo personalizado.
 field-visibility-expression=Expressão de Visibilidade do Campo
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Nome do parâmetro filtro
 form-entries=Entradas do formulário
 form-settings=Configurações do Formulário
@@ -156,6 +159,7 @@ from-data-provider=A partir do provedor de dados
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=Selecione uma localização de um mapa.
 geolocation-field-type-label=Geolocalização
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Selecionar opções de uma matriz.
 grid-field-type-label=Grade
 help-text=Texto de Ajuda
@@ -188,6 +192,7 @@ json[stands-for]=JSON
 jump-to-page=Pular para a página
 jump-to-page-x=Pular para a página {0}
 keyword=Teclado
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Sair do formulário?
 leave-page=Deixar
 manage-templates=Gerenciar Modelos
@@ -270,7 +275,6 @@ save-form=Salvar Formulário
 saved-x=Salvo &#149; {0}
 saving=Salvando
 script-file=Script
-section-field-type-label=Grupo de Campos
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Selecione um formulário existente ou adicione um novo.
 select-field-type-description=Escolher um ou mais opções de uma lista.
 select-field-type-label=Selecionar da lista
