--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_PT.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=Fornece o serviço remoto para aceder, adicionar, remo
 ddmweb-configuration-name=Mapeamento de Dados Dinâmicos WEB
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Defina as condições e ações para mudar campos e elementos no formulário. (Automatic Translation)
 delete-action=Delete action? (Automatic Copy)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Excluir condição? (Automatic Translation)
 delete-current-page=Remover a Página Atual
 delete-field-dialog-title=Exclua o campo? (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=Digite o parâmetro. (Automatic Translation)
 enter-the-path=Digite o caminho. (Automatic Translation)
 enter-the-rest-service-url=Introduza o URL do serviço REST.
 enter-time-in-milliseconds=Digite o tempo em milissegundos. (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Expressão (Automatic Translation)
 field-name-is-already-in-use=O nome do campo já está a ser utilizado.
 field-types-basic-elements=Elementos básicos (Automatic Translation)
@@ -147,6 +149,7 @@ field-types-customized-elements=Elementos personalizados (Automatic Translation)
 field-types-sidebar-title=Adicionar elementos (Automatic Translation)
 field-validation-failed=A validação de um campo personalizado falhou.
 field-visibility-expression=Expressão de Visibilidade do Campo
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Nome de parâmetro de filtro (Automatic Translation)
 form-entries=Entradas de Formulário
 form-settings=Configurações do Formulário
@@ -156,6 +159,7 @@ from-data-provider=Do provedor de dados (Automatic Translation)
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=Selecione um local a partir de um mapa. (Automatic Translation)
 geolocation-field-type-label=Geolocalização (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Selecionar opções de uma matriz.
 grid-field-type-label=Grade
 help-text=Texto Auxiliar
@@ -188,6 +192,7 @@ json[stands-for]=JSON
 jump-to-page=Ir para página (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Palavra-chave (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Embora o formulário? (Automatic Translation)
 leave-page=Deixar
 manage-templates=Gerir Templates
@@ -270,7 +275,6 @@ save-form=Salvar o formulário (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Salvando
 script-file=Script
-section-field-type-label=Grupo Fields (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Selecione um formulário existente ou adicione um formulário para ser apresentado nesta aplicação.
 select-field-type-description=Selecione opções de uma lista. (Automatic Translation)
 select-field-type-label=Selecione da lista (Automatic Translation)
