--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sk.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=Poskytuje vzdialenú službu pre prístup, pridávanie
 ddmweb-configuration-name=Mapovanie dynamického dátového zoznamu
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Definovať podmienky a akcie zmeniť polia a prvkov vo formulári. (Automatic Translation)
 delete-action=Odstrániť akciu? (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Odstrániť podmienku? (Automatic Translation)
 delete-current-page=Odstrániť aktuálnu stranu (Automatic Translation)
 delete-field-dialog-title=Odstránenie poľa? (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=Zadajte parameter. (Automatic Translation)
 enter-the-path=Zadajte cestu. (Automatic Translation)
 enter-the-rest-service-url=Zadajte adresu URL služby REST. (Automatic Translation)
 enter-time-in-milliseconds=Zadajte čas v milisekundách. (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Výraz (Automatic Translation)
 field-name-is-already-in-use=Názov poľa sa už používa.
 field-types-basic-elements=Základné prvky (Automatic Translation)
@@ -147,6 +149,7 @@ field-types-customized-elements=Vlastné prvky (Automatic Translation)
 field-types-sidebar-title=Pridať prvky (Automatic Translation)
 field-validation-failed=Vlastné pole overenie zlyhalo. (Automatic Translation)
 field-visibility-expression=Pole viditeľnosti výraz (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Parameter Názov filtra (Automatic Translation)
 form-entries=Formulár položky (Automatic Translation)
 form-settings=Nastavenie formulára (Automatic Translation)
@@ -156,6 +159,7 @@ from-data-provider=Od poskytovateľa údajov (Automatic Translation)
 ftl[stands-for]=FreeMaker
 geolocation-field-type-description=Vyberte umiestnenie z mapy. (Automatic Translation)
 geolocation-field-type-label=Geolocation (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Vyberte voľby z matice. (Automatic Translation)
 grid-field-type-label=Mriežka (Automatic Translation)
 help-text=Text Pomocníka (Automatic Translation)
@@ -188,6 +192,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Prejsť na stranu (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Kľúčové slovo (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Ponechať formulár? (Automatic Translation)
 leave-page=Opustiť
 manage-templates=Spravovať šablóny
@@ -270,7 +275,6 @@ save-form=Uložiť formulár (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Ukladanie (Automatic Translation)
 script-file=Skriptový súbor
-section-field-type-label=Skupiny polí (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Vyberte existujúci formulár alebo pridajte formulár, ktorý sa má zobraziť v tejto aplikácii.
 select-field-type-description=Vyberte položku Voľby zo zoznamu. (Automatic Translation)
 select-field-type-label=Vyberte zo zoznamu (Automatic Translation)
