--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sl.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=(Automatic Copy)
 ddmweb-configuration-name=Dynamic Data preslikavo spletnih (Automatic Translation)
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Določite pogoje in dejanja, želite spremeniti polja in elemente v obrazcu. (Automatic Translation)
 delete-action=Ali želite izbrisati dejanja? (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Izbrisati pogoj? (Automatic Translation)
 delete-current-page=Izbriše trenutno stran (Automatic Translation)
 delete-field-dialog-title=Ali želite izbrisati polje? (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=Vnesite parameter. (Automatic Translation)
 enter-the-path=Vnesite pot. (Automatic Translation)
 enter-the-rest-service-url=Vnesite spletni naslov REST storitev. (Automatic Translation)
 enter-time-in-milliseconds=Vnesite čas v milisekundah. (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Izraz (Automatic Translation)
 field-name-is-already-in-use=Ime polja je že v uporabi. (Automatic Translation)
 field-types-basic-elements=Osnovne elemente (Automatic Translation)
@@ -147,6 +149,7 @@ field-types-customized-elements=Prilagojene elemente (Automatic Translation)
 field-types-sidebar-title=Dodajanje elementov (Automatic Translation)
 field-validation-failed=A preverjanje polja po meri ni uspelo. (Automatic Translation)
 field-visibility-expression=Polje vidnosti izraz (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Ime parametra filtra (Automatic Translation)
 form-entries=Vnose za obrazce (Automatic Translation)
 form-settings=Nastavitve obrazca (Automatic Translation)
@@ -156,6 +159,7 @@ from-data-provider=Ponudnika podatkov (Automatic Translation)
 ftl[stands-for]=FreeMarker (Automatic Copy)
 geolocation-field-type-description=Izberite lokacijo na zemljevidu. (Automatic Translation)
 geolocation-field-type-label=Geolocation (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Izberite možnosti iz matrike. (Automatic Translation)
 grid-field-type-label=Mreža (Automatic Translation)
 help-text=Besedilo pomoči (Automatic Translation)
@@ -188,6 +192,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Skoči na stran (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Ključne besede (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Pusti obrazec? (Automatic Translation)
 leave-page=Zapusti
 manage-templates=Uredi predloge
@@ -270,7 +275,6 @@ save-form=Shranite obrazec (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Varčevanje (Automatic Translation)
 script-file=Skript datoteke (Automatic Translation)
-section-field-type-label=Skupina polj (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Izberite obstoječ obrazec ali dodati obrazec, prikazan v tej vlogi. (Automatic Translation)
 select-field-type-description=Izberite mo3/4nosti s seznama. (Automatic Translation)
 select-field-type-label=Izberite iz seznama (Automatic Translation)
