--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sv.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=Tillhandahåller fjärrtjänsten för att komma åt, l
 ddmweb-configuration-name=Webb för dynamisk datamappning
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Definiera villkor och åtgärder för att ändra fält och element i formuläret.
 delete-action=Ta bort åtgärd?
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Ta bort villkor?
 delete-current-page=Ta bort aktuell sida
 delete-field-dialog-title=Ta bort fält?
@@ -140,6 +141,7 @@ enter-the-parameter=Ange parametern.
 enter-the-path=Ange sökvägen.
 enter-the-rest-service-url=Ange URL för REST-tjänst.
 enter-time-in-milliseconds=Ange tid i millisekunder.
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Uttryck
 field-name-is-already-in-use=Fältnamnet används redan.
 field-types-basic-elements=Vanliga element
@@ -147,6 +149,7 @@ field-types-customized-elements=Anpassade element
 field-types-sidebar-title=Lägg till element
 field-validation-failed=Det gick inte att validera anpassat fält.
 field-visibility-expression=Fältets synlighetsuttryck
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Namn på filterparameter
 form-entries=Formulärinlägg
 form-settings=Formulärinställningar
@@ -156,6 +159,7 @@ from-data-provider=Från dataprovider
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=Välj en plats från en karta.
 geolocation-field-type-label=Geolokalisering
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Välj alternativ från en matris.
 grid-field-type-label=Rutnät
 help-text=Hjälptext
@@ -188,6 +192,7 @@ json[stands-for]=JSON
 jump-to-page=Hoppa till sida
 jump-to-page-x=Hoppa till sida {0}
 keyword=Nyckelord
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Lämna formulär?
 leave-page=Lämna
 manage-templates=Hantera mallar
@@ -270,7 +275,6 @@ save-form=Spara formulär
 saved-x=Sparade &#149; {0}
 saving=Sparar
 script-file=Skriptfil
-section-field-type-label=Fältgrupp
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Välj ett befintligt formulär eller lägg till ett formulär som visas i den här applikationen.
 select-field-type-description=Välj ett eller fler alternativ från en lista.
 select-field-type-label=Välj från lista
