--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ta_IN.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=Provides the remote service for accessing, adding, cop
 ddmweb-configuration-name=டைனமிக் Data மேப்பிங் Web
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Define conditions and actions to change fields and elements on the form.
 delete-action=செயலை நீக்கவா?
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=கண்டிஷன்களை நீக்கவா?
 delete-current-page=தற்போதைய பக்கத்தை நீக்கு
 delete-field-dialog-title=புலம் நீக்கவா?
@@ -140,6 +141,7 @@ enter-the-parameter=அளவுரு உள்ளிடவும்.
 enter-the-path=பாதையை உள்ளிடவும்.
 enter-the-rest-service-url=REST service URL-ஐ உள்ளிடவும்.
 enter-time-in-milliseconds=மில்லி விநாடிகளில் நேரத்தை உள்ளிடவும்.
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Expression
 field-name-is-already-in-use=Field பெயர் ஏற்கனவே உபயோகத்தில் உள்ளது.
 field-types-basic-elements=அடிப்படை கூறுகள்
@@ -147,6 +149,7 @@ field-types-customized-elements=தனிப்பயனாக்கப்பட
 field-types-sidebar-title=கூறுகளைச் சேர்
 field-validation-failed=Custom field சரிபார்ப்பு தோல்வியடைந்தது.
 field-visibility-expression=Field Visibility Expression
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Filter Parameter Name
 form-entries=படிவம் பதிவுகள்
 form-settings=படிவம் அமைப்புகள்
@@ -156,6 +159,7 @@ from-data-provider=தரவு வழங்குநரிடமிருந்
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=Select a location from a map. (Automatic Copy)
 geolocation-field-type-label=Geolocation (Automatic Copy)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=மேட்ரிக்ஸிலிருந்து விருப்பங்களைத் தேர்ந்தெடுக்கவும்.
 grid-field-type-label=கட்டம்
 help-text=உதவி உரை
@@ -188,6 +192,7 @@ json[stands-for]=JSON
 jump-to-page=பக்கம் தாவி செல்லவும்
 jump-to-page-x=பக்கம் தாவி செல்லவும் {0}
 keyword=கீவேர்டு
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Leave form?
 leave-page=விலகு
 manage-templates=Templates நிர்வகிக்க
@@ -270,7 +275,6 @@ save-form=படிவத்தை சேமி
 saved-x=சேமிக்கப்பட்டது &#149;{0}
 saving=சேமிக்கின்றது
 script-file=Script File
-section-field-type-label=Fields Group (Automatic Copy)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=ஏற்கனவே உள்ள படிவத்தைத் தேர்ந்தெடுக்கவும் அல்லது இந்தப் பயன்பாட்டில் காண்பிக்கப்படும் படிவத்தைச் சேர்க்கவும்.
 select-field-type-description=பட்டியலிலிருந்து ஒன்று அல்லது அதற்கு மேற்பட்ட விருப்பங்களைத் தேர்வுசெய்யவும்.
 select-field-type-label=பட்டியலில் இருந்து தேர்ந்தெடுக்கவும்
