--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_th.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=ให้บริการระยะไกลเข
 ddmweb-configuration-name=เว็บการแม็ปข้อมูลแบบไดนามิก (Automatic Translation)
 define-condition-and-action-to-change-fields-and-elements-on-the-form=กำหนดเงื่อนไขและการกระทำการเปลี่ยนเขตข้อมูลและองค์ประกอบในแบบฟอร์ม (Automatic Translation)
 delete-action=การดำเนินการลบ (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=ลบเงื่อนไข (Automatic Translation)
 delete-current-page=ลบหน้าปัจจุบัน (Automatic Translation)
 delete-field-dialog-title=ลบฟิลด์ (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=ป้อนพารามิเตอร์ (Automatic Tra
 enter-the-path=ป้อนพาธ (Automatic Translation)
 enter-the-rest-service-url=ป้อน URL บริการส่วนเหลือ (Automatic Translation)
 enter-time-in-milliseconds=ป้อนเวลาในมิลลิวินาที (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=นิพจน์ (Automatic Translation)
 field-name-is-already-in-use=ใช้ชื่อเขตข้อมูลอยู่แล้ว (Automatic Translation)
 field-types-basic-elements=องค์ประกอบพื้นฐาน (Automatic Translation)
@@ -147,6 +149,7 @@ field-types-customized-elements=องค์ประกอบที่กำห
 field-types-sidebar-title=เพิ่มองค์ประกอบ (Automatic Translation)
 field-validation-failed=การตรวจสอบฟิลด์แบบกำหนดเองล้มเหลว (Automatic Translation)
 field-visibility-expression=มองเห็นเขตข้อมูลนิพจน์ (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=ชื่อพารามิเตอร์ตัวกรอง (Automatic Translation)
 form-entries=แบบฟอร์มรายการ (Automatic Translation)
 form-settings=การตั้งค่าแบบฟอร์ม (Automatic Translation)
@@ -156,6 +159,7 @@ from-data-provider=จากผู้ให้ข้อมูล (Automatic Tran
 ftl[stands-for]=FreeMarker (Automatic Copy)
 geolocation-field-type-description=เลือกตำแหน่งที่ตั้งจากแผนที่ (Automatic Translation)
 geolocation-field-type-label=ตำแหน่ง (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=เลือกตัวเลือกจากเมตริกซ์ (Automatic Translation)
 grid-field-type-label=เส้นตาราง (Automatic Translation)
 help-text=ข้อความวิธีใช้ (Automatic Translation)
@@ -188,6 +192,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=ไปที่หน้า (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=คำสำคัญ (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=ออกจากแบบฟอร์มหรือไม่ (Automatic Translation)
 leave-page=ปล่อยให้ (Automatic Translation)
 manage-templates=จัดการแม่แบบ (Automatic Translation)
@@ -270,7 +275,6 @@ save-form=บันทึกฟอร์ม (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=ประหยัด (Automatic Translation)
 script-file=แฟ้มสคริปต์ (Automatic Translation)
-section-field-type-label=กลุ่มฟิลด์ (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=เลือกฟอร์มที่มีอยู่ หรือเพิ่มแบบฟอร์มจะแสดงในโปรแกรมนี้ (Automatic Translation)
 select-field-type-description=เลือกตัวเลือกจากรายการ (Automatic Translation)
 select-field-type-label=เลือกจากรายการ (Automatic Translation)
