--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_vi.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=Cung cáp dịch vụ gọi từ xa để truy nhập,
 ddmweb-configuration-name=Dữ liệu động lập bản đồ Web (Automatic Translation)
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Xác định các điều kiện và hành động để thay đổi các lĩnh vực và các yếu tố về hình thức. (Automatic Translation)
 delete-action=Xoá hành động? (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Xóa điều kiện? (Automatic Translation)
 delete-current-page=Xóa trang hiện tại (Automatic Translation)
 delete-field-dialog-title=Xóa bỏ các trường? (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=Nhập các thông số. (Automatic Translation)
 enter-the-path=Nhập đường dẫn. (Automatic Translation)
 enter-the-rest-service-url=Nhập URL dịch vụ còn lại. (Automatic Translation)
 enter-time-in-milliseconds=Hãy nhập thời gian trong mili giây. (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Biểu hiện (Automatic Translation)
 field-name-is-already-in-use=Tên trường hiện đang sử dụng. (Automatic Translation)
 field-types-basic-elements=Yếu tố cơ bản (Automatic Translation)
@@ -147,6 +149,7 @@ field-types-customized-elements=Tùy chỉnh các yếu tố (Automatic Translat
 field-types-sidebar-title=Thêm các yếu tố (Automatic Translation)
 field-validation-failed=Xác nhận lĩnh vực tùy chỉnh thất bại. (Automatic Translation)
 field-visibility-expression=Lĩnh vực khả năng hiển thị biểu hiện (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Tên bộ lọc tham số (Automatic Translation)
 form-entries=Mẫu mục (Automatic Translation)
 form-settings=Cài đặt hình thức (Automatic Translation)
@@ -156,6 +159,7 @@ from-data-provider=Từ nhà cung cấp dữ liệu (Automatic Translation)
 ftl[stands-for]=FreeMarker (Automatic Copy)
 geolocation-field-type-description=Chọn một vị trí từ bản đồ. (Automatic Translation)
 geolocation-field-type-label=Geolocation (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Chọn các tùy chọn từ ma trận. (Automatic Translation)
 grid-field-type-label=Lưới điện (Automatic Translation)
 help-text=Văn bản trợ giúp (Automatic Translation)
@@ -188,6 +192,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Chuyển đến trang (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Từ khóa (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Để lại hình thức? (Automatic Translation)
 leave-page=Rời khỏi
 manage-templates=Quản lý biểu mẫu
@@ -270,7 +275,6 @@ save-form=Lưu mẫu (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Tiết kiệm (Automatic Translation)
 script-file=Tập tin script
-section-field-type-label=Nhóm Fields (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Chọn một hình thức hiện tại hoặc thêm một hình thức sẽ được hiển thị trong ứng dụng này. (Automatic Translation)
 select-field-type-description=Chọn tùy chọn từ danh sách. (Automatic Translation)
 select-field-type-label=Chọn từ danh sách (Automatic Translation)
