--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_CN.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=提供访问、添加、删除和更新动态数据映
 ddmweb-configuration-name=动态数据映射Web
 define-condition-and-action-to-change-fields-and-elements-on-the-form=定义更改表单上的字段和元素的条件和操作。
 delete-action=删除操作​​​​​​​​​？
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=删除条件？
 delete-current-page=删除现有页面
 delete-field-dialog-title=删除字段？
@@ -140,6 +141,7 @@ enter-the-parameter=输入参数。
 enter-the-path=输入路径。
 enter-the-rest-service-url=输入其他服务URL。
 enter-time-in-milliseconds=以毫秒为单位输入时间。
+export-all-entries=Export All Entries (Automatic Copy)
 expression=表达式
 field-name-is-already-in-use=字段名已被使用
 field-types-basic-elements=基本元素
@@ -147,6 +149,7 @@ field-types-customized-elements=自定义元素
 field-types-sidebar-title=添加元素
 field-validation-failed=自定义字段验证失败。
 field-visibility-expression=字段可见性的表达
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=筛选参数名称
 form-entries=表格条目
 form-settings=表单设置
@@ -156,6 +159,7 @@ from-data-provider=来自数据提供器
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=从地图中选择位置。
 geolocation-field-type-label=地理位置
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=从矩阵中选择选项。
 grid-field-type-label=网格
 help-text=帮助文本
@@ -188,6 +192,7 @@ json[stands-for]=JSON
 jump-to-page=跳转到页
 jump-to-page-x=跳转到页{0}
 keyword=关键字
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=离开表单？
 leave-page=离开
 manage-templates=管理模板
@@ -270,7 +275,6 @@ save-form=保存此表单
 saved-x=已保存 &#149; {0}
 saving=保存
 script-file=脚本文件
-section-field-type-label=字段组
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=请选择一个现存的表单或添加一个表单以显示在此应用程序中。
 select-field-type-description=从列表中选择一个或多个选项。
 select-field-type-label=从列表中选择
