--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ar.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=يوفر الخدمة البعيدة للوصول إل
 ddmweb-configuration-name=ويب تعيين البيانات الديناميكية
 define-condition-and-action-to-change-fields-and-elements-on-the-form=حدد الشرط/الشروط والإجراء/الإجراءات لتغيير الحقول والعناصر في النموذج.
 delete-action=حذف الإجراء؟
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=حذف الشرط؟
 delete-current-page=حذف الصفحة الحالية
 delete-field-dialog-title=حذف حقل؟
@@ -140,6 +141,7 @@ enter-the-parameter=أدخل المعلمة.
 enter-the-path=أدخل المسار.
 enter-the-rest-service-url=أدخل عنوان URL لخدمة REST.
 enter-time-in-milliseconds=أدخل الوقت بالمللي ثانية.
+export-all-entries=Export All Entries (Automatic Copy)
 expression=التعبير
 field-name-is-already-in-use=اسم الحقل قيد الاستخدام بالفعل.
 field-types-basic-elements=العناصر الأساسية
@@ -147,6 +149,7 @@ field-types-customized-elements=العناصر المخصصة
 field-types-sidebar-title=إضافة عناصر
 field-validation-failed=فشل التحقق من صحة الحقل المخصص.
 field-visibility-expression=تعبير رؤية الحقل
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=اسم معلمة التصفية
 form-entries=إدخالات النماذج
 form-settings=إعدادات النموذج
@@ -156,6 +159,7 @@ from-data-provider=من موفر البيانات
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=حدد موقعًا من الخريطة.
 geolocation-field-type-label=الموقع الجغرافي
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=حدد خيارات من صفيف.
 grid-field-type-label=شبكة
 help-text=نص التعليمات
@@ -188,6 +192,7 @@ json[stands-for]=JSON
 jump-to-page=انتقال إلى صفحة
 jump-to-page-x=انتقال إلى صفحة {0}
 keyword=كلمة رئيسية
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=ترك النموذج؟
 leave-page=غادر
 manage-templates=عرض الهياكل
@@ -270,7 +275,6 @@ save-form=نموذج الحفظ
 saved-x=محفوظ &#149; {0}
 saving=حفظ
 script-file=ملف برنامج نصي
-section-field-type-label=مجموعة الحقول
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=حدد نموذجًا موجودًا أو أضف نموذجًا ليتم عرضه في هذا التطبيق.
 select-field-type-description=اختر خيارًا واحدًا أو أكثر من القائمة.
 select-field-type-label=تحديد من القائمة
