--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_cs.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=Poskytuje vzdálené rozhraní pro přístup, přidáv
 ddmweb-configuration-name=Dynamická Data mapování webu (Automatic Translation)
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Definujte podmínky a akce změnit pole a prvky na formuláři. (Automatic Translation)
 delete-action=Odstranit akci? (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Odstranit podmínku? (Automatic Translation)
 delete-current-page=Odstranit aktuální stránku (Automatic Translation)
 delete-field-dialog-title=Odstranit pole? (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=Zadejte parametr. (Automatic Translation)
 enter-the-path=Zadejte cestu. (Automatic Translation)
 enter-the-rest-service-url=Zadejte adresu URL služby REST. (Automatic Translation)
 enter-time-in-milliseconds=Zadejte čas v milisekundách. (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Výraz (Automatic Translation)
 field-name-is-already-in-use=Pole název je již používán. (Automatic Translation)
 field-types-basic-elements=Základní elementy (Automatic Translation)
@@ -147,6 +149,7 @@ field-types-customized-elements=Vlastní prvky (Automatic Translation)
 field-types-sidebar-title=Přidat prvky (Automatic Translation)
 field-validation-failed=Vlastní pole ověření se nezdařilo. (Automatic Translation)
 field-visibility-expression=Výraz pole viditelnosti (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Název parametru filtru (Automatic Translation)
 form-entries=Formulář položky (Automatic Translation)
 form-settings=Nastavení formuláře (Automatic Translation)
@@ -156,6 +159,7 @@ from-data-provider=Od poskytovatele dat (Automatic Translation)
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=Vyberte umístění z mapy. (Automatic Translation)
 geolocation-field-type-label=Geolocation (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Vyberte možnosti z matice. (Automatic Translation)
 grid-field-type-label=Mřížka (Automatic Translation)
 help-text=Text nápovědy (Automatic Translation)
@@ -188,6 +192,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Přejít na stránku (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Klíčové slovo (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Opustit formulář? (Automatic Translation)
 leave-page=Opustit
 manage-templates=Spravovat šablony
@@ -270,7 +275,6 @@ save-form=Uložit formulář (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Ukládání (Automatic Translation)
 script-file=Soubor se skriptem
-section-field-type-label=Skupina polí (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Vyberte existující formulář nebo přidat formulář, který se má zobrazit v této aplikaci. (Automatic Translation)
 select-field-type-description=Vyberte možnosti ze seznamu. (Automatic Translation)
 select-field-type-label=Vyberte ze seznamu (Automatic Translation)
