--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_en.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_en.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=Provides the remote service for accessing, adding, cop
 ddmweb-configuration-name=Dynamic Data Mapping Web
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Define conditions and actions to change fields and elements on the form.
 delete-action=Delete action?
+delete-all-entries=Delete All Entries
 delete-condition=Delete condition?
 delete-current-page=Delete Current Page
 delete-field-dialog-title=Delete field?
@@ -140,6 +141,7 @@ enter-the-parameter=Enter the parameter.
 enter-the-path=Enter the path.
 enter-the-rest-service-url=Enter the REST service URL.
 enter-time-in-milliseconds=Enter time in milliseconds.
+export-all-entries=Export All Entries
 expression=Expression
 field-name-is-already-in-use=Field name is already in use.
 field-types-basic-elements=Basic Elements
@@ -147,6 +149,7 @@ field-types-customized-elements=Customized Elements
 field-types-sidebar-title=Add Elements
 field-validation-failed=A custom field validation failed.
 field-visibility-expression=Field Visibility Expression
+fieldset-field-type-label=Fields Group
 filter-parameter-name=Filter Parameter Name
 form-entries=Form Entries
 form-settings=Form Settings
@@ -156,6 +159,7 @@ from-data-provider=From Data Provider
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=Select a location from a map.
 geolocation-field-type-label=Geolocation
+get-email-notifications=Get Email Notifications
 grid-field-type-description=Select options from a matrix.
 grid-field-type-label=Grid
 help-text=Help Text
@@ -188,6 +192,7 @@ json[stands-for]=JSON
 jump-to-page=Jump to Page
 jump-to-page-x=Jump to Page {0}
 keyword=Keyword
+last-entry-sent-x-ago=Last entry sent {0} ago
 leave-form=Leave form?
 leave-page=Leave
 manage-templates=Manage Templates
@@ -270,7 +275,6 @@ save-form=Save Form
 saved-x=Saved &#149; {0}
 saving=Saving
 script-file=Script File
-section-field-type-label=Fields Group
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Select an existing form or add a form to be displayed in this application.
 select-field-type-description=Select options from a list.
 select-field-type-label=Select from List
