--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ja.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=動的データマッピング(DDM) テンプレート
 ddmweb-configuration-name=動的データマッピング Web
 define-condition-and-action-to-change-fields-and-elements-on-the-form=フィールドおよびフォーム上の要素を変更する条件とアクションを定義します。
 delete-action=アクションを削除しますか？
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=条件を削除しますか？
 delete-current-page=現在のページを削除する
 delete-field-dialog-title=フィールドを削除しますか？
@@ -140,6 +141,7 @@ enter-the-parameter=パラメータを入力してください
 enter-the-path=パスを入力してください
 enter-the-rest-service-url=RESTサービスURLを入力してください。
 enter-time-in-milliseconds=時間をミリ秒単位で入力してください。
+export-all-entries=Export All Entries (Automatic Copy)
 expression=式
 field-name-is-already-in-use=フィールド名が使われています
 field-types-basic-elements=基本要素
@@ -147,6 +149,7 @@ field-types-customized-elements=カスタム要素
 field-types-sidebar-title=要素を追加
 field-validation-failed=カスタムフィールドのバリデーションが失敗しました。
 field-visibility-expression=フィールドの可視/不可視
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=パラメータ名で絞り込む
 form-entries=フォームエントリー
 form-settings=フォームの設定
@@ -156,6 +159,7 @@ from-data-provider=データプロバイダー
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=地図から場所を選択します。
 geolocation-field-type-label=位置情報
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=マトリックスからオプションを選択してください
 grid-field-type-label=グリッド
 help-text=ヘルプテキスト
@@ -188,6 +192,7 @@ json[stands-for]=JSON
 jump-to-page=ページへ移動
 jump-to-page-x=ページ{0} へ移動
 keyword=キーワード
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=フォームから移動しますか？
 leave-page=このページを離れる
 manage-templates=テンプレートの管理
@@ -270,7 +275,6 @@ save-form=フォームを保存
 saved-x=保存済み &#149; {0}
 saving=保存中
 script-file=スクリプトファイル
-section-field-type-label=フィールドグループ
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=既存のフォームを選択して表示するか、新規フォームを追加してください。
 select-field-type-description=複数の選択肢からプルダウンで選択します
 select-field-type-label=プルダウン
