--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_tr.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=(Automatic Copy)
 ddmweb-configuration-name=Dinamik veri eşleme Web (Automatic Translation)
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Koşulları ve alanları ve formu üzerindeki öğelerin değiştirmek için eylemleri tanımlayın. (Automatic Translation)
 delete-action=Eylem silinsin mi? (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Koşul silinsin mi? (Automatic Translation)
 delete-current-page=Geçerli sayfayı Sil (Automatic Translation)
 delete-field-dialog-title=Alan silinsin mi? (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=Parametre girin. (Automatic Translation)
 enter-the-path=Yolunu girin. (Automatic Translation)
 enter-the-rest-service-url=Geri kalan hizmeti URL'si girin. (Automatic Translation)
 enter-time-in-milliseconds=Süreyi milisaniye cinsinden girin. (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=İfade (Automatic Translation)
 field-name-is-already-in-use=Alan adı zaten kullanımda. (Automatic Translation)
 field-types-basic-elements=Temel öğeleri (Automatic Translation)
@@ -147,6 +149,7 @@ field-types-customized-elements=Özelleştirilmiş öğeler (Automatic Translati
 field-types-sidebar-title=Öğeler eklemek (Automatic Translation)
 field-validation-failed=Bir özel alan doğrulaması başarısız oldu. (Automatic Translation)
 field-visibility-expression=Alan görünürlük ifade (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Filtre parametresi adı (Automatic Translation)
 form-entries=Form girişlerini (Automatic Translation)
 form-settings=Form ayarları (Automatic Translation)
@@ -156,6 +159,7 @@ from-data-provider=Veri sağlayıcısı'ndan (Automatic Translation)
 ftl[stands-for]=FreeMarker (Automatic Copy)
 geolocation-field-type-description=Haritadan bir konum seçin. (Automatic Translation)
 geolocation-field-type-label=Geolocation (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Bir matristen seçenekleri seçin. (Automatic Translation)
 grid-field-type-label=Kılavuz (Automatic Translation)
 help-text=Yardım metni (Automatic Translation)
@@ -188,6 +192,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Sayfaya atlamak (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Anahtar kelime (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Formdan çıkın? (Automatic Translation)
 leave-page=Ayrıl/Vazgeç
 manage-templates=Şablonları Yönet
@@ -270,7 +275,6 @@ save-form=Formu Kaydet (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Kaydetme (Automatic Translation)
 script-file=Komut dosyası (Automatic Translation)
-section-field-type-label=Alanlar Grubu (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Bu uygulamada görünmesini forma ekleme veya varolan bir formu seçin. (Automatic Translation)
 select-field-type-description=Listeden seçenekleri seçin. (Automatic Translation)
 select-field-type-label=Listeden seçin (Automatic Translation)
