--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_uk.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=(Automatic Copy)
 ddmweb-configuration-name=Динамічних даних зіставлення Web (Automatic Translation)
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Визначають умови та дії для зміни полів і елементів у формі. (Automatic Translation)
 delete-action=Видалити дію? (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Видалити умови? (Automatic Translation)
 delete-current-page=Видалення поточної сторінки (Automatic Translation)
 delete-field-dialog-title=Видалення поля? (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=Введіть параметр. (Automatic Translation)
 enter-the-path=Введіть шлях. (Automatic Translation)
 enter-the-rest-service-url=Введіть URL-адресу служби відпочинку. (Automatic Translation)
 enter-time-in-milliseconds=Введіть час у мілісекундах. (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Вираз (Automatic Translation)
 field-name-is-already-in-use=Ім'я поля вже існує. (Automatic Translation)
 field-types-basic-elements=Основні елементи (Automatic Translation)
@@ -147,6 +149,7 @@ field-types-customized-elements=Настроєних елементів (Automat
 field-types-sidebar-title=Додати елементи (Automatic Translation)
 field-validation-failed=Не вдалося перевірити настроюване поле. (Automatic Translation)
 field-visibility-expression=Видимість поля виразу (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Ім'я параметра фільтр (Automatic Translation)
 form-entries=Записи форм (Automatic Translation)
 form-settings=Параметри форми (Automatic Translation)
@@ -156,6 +159,7 @@ from-data-provider=Від постачальника даних (Automatic Trans
 ftl[stands-for]=FreeMarker (Automatic Copy)
 geolocation-field-type-description=Виберіть місце з карти. (Automatic Translation)
 geolocation-field-type-label=Geolocation (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Виберіть параметри з матриці. (Automatic Translation)
 grid-field-type-label=Сітка (Automatic Translation)
 help-text=Текст довідки (Automatic Translation)
@@ -188,6 +192,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Перейти до сторінки (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Ключове слово (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Залишити форми? (Automatic Translation)
 leave-page=Вийти
 manage-templates=Управління шаблонами
@@ -270,7 +275,6 @@ save-form=Зберегти форму (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Збереження (Automatic Translation)
 script-file=Файл сценарію (Automatic Translation)
-section-field-type-label=Група полів (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Виберіть наявну форму або додати форму для відображення в цьому додатку. (Automatic Translation)
 select-field-type-description=Виберіть параметри зі списку. (Automatic Translation)
 select-field-type-label=Виберіть зі списку (Automatic Translation)
