--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_TW.properties
@@ -97,6 +97,7 @@ ddm-template-service-help=提供遠端服務以存取、加入、複製、刪除
 ddmweb-configuration-name=動態資料對映
 define-condition-and-action-to-change-fields-and-elements-on-the-form=定義條件和操作以更改表單上的欄位和元素。 (Automatic Translation)
 delete-action=是否刪除操作？ (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=是否刪除條件？ (Automatic Translation)
 delete-current-page=刪除當前頁 (Automatic Translation)
 delete-field-dialog-title=刪除欄位？ (Automatic Translation)
@@ -140,6 +141,7 @@ enter-the-parameter=輸入參數。 (Automatic Translation)
 enter-the-path=輸入的路徑。 (Automatic Translation)
 enter-the-rest-service-url=輸入其他服務 URL。 (Automatic Translation)
 enter-time-in-milliseconds=以毫秒為單位輸入時間。 (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=運算式 (Automatic Translation)
 field-name-is-already-in-use=欄位名稱已經被使用。
 field-types-basic-elements=基本元素 (Automatic Translation)
@@ -147,6 +149,7 @@ field-types-customized-elements=自訂的元素 (Automatic Translation)
 field-types-sidebar-title=添加元素 (Automatic Translation)
 field-validation-failed=自訂欄位驗證失敗。 (Automatic Translation)
 field-visibility-expression=欄位的可見度運算式 (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=篩選器參數名稱 (Automatic Translation)
 form-entries=表單條目 (Automatic Translation)
 form-settings=表單設置 (Automatic Translation)
@@ -156,6 +159,7 @@ from-data-provider=從資料提供程式 (Automatic Translation)
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=從地圖中選擇位置。 (Automatic Translation)
 geolocation-field-type-label=地理位置 (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=從矩陣中選擇選項。 (Automatic Translation)
 grid-field-type-label=網 格 (Automatic Translation)
 help-text=説明文本 (Automatic Translation)
@@ -188,6 +192,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=跳轉到頁 (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=關鍵 字 (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=保持表單？ (Automatic Translation)
 leave-page=離開
 manage-templates=管理版型
@@ -270,7 +275,6 @@ save-form=保存表單 (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=保存 (Automatic Translation)
 script-file=Script 檔案
-section-field-type-label=欄位組 (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=選擇一個已存在表單或增加一個表單以在這應用程式中顯示。
 select-field-type-description=從清單中選擇選項。 (Automatic Translation)
 select-field-type-label=從清單中選擇 (Automatic Translation)
